Add markdown & png files

--- a/styles/rainbow-tabs.less
+++ b/styles/rainbow-tabs.less
@@ -29,3 +29,5 @@
 .rainbow-tab('.txt',rgb(255,255,255));
 .rainbow-tab('.elm', #60B5CC);
 .rainbow-tab('.jl', rgb(170,121,193));
+.rainbow-tab('.md', rgb(97, 157, 182));
+.rainbow-tab('.png', rgb(218, 131, 57));
