--- a/styles/rainbow-tabs.less
+++ b/styles/rainbow-tabs.less
@@ -12,6 +12,7 @@
 .rainbow-tab('.eyaml', #FF5AE0);
 .rainbow-tab('.go', rgb(106, 215, 229));
 .rainbow-tab('.html', rgb(252,128,27));
+.rainbow-tab('.ini', rgb(244, 191, 117));
 .rainbow-tab('.java', rgb(221, 78, 56));
 .rainbow-tab('.jl', rgb(170,121,193));
 .rainbow-tab('.json', rgb(252,216,76));
