--- a/styles/rainbow-tabs.less
+++ b/styles/rainbow-tabs.less
@@ -4,6 +4,7 @@
 .rainbow-tab('.coffee', rgb(214,233,245));
 .rainbow-tab('.cpp', rgb(102, 154, 211));
 .rainbow-tab('.c', rgb(106,215,229));
+.rainbow-tab('.cs', rgb(103, 153, 174));
 .rainbow-tab('.css', #29abde);
 .rainbow-tab('.elm', #60B5CC);
 .rainbow-tab('.erb', #cb6277);
