--- a/styles/rainbow-tabs.less
+++ b/styles/rainbow-tabs.less
@@ -18,10 +18,12 @@
 .rainbow-tab('.jl', rgb(170,121,193));
 .rainbow-tab('.json', rgb(252,216,76));
 .rainbow-tab('.json', rgb(252,216,76));
+	.rainbow-tab('package.json', rgb(203, 56, 55));
 .rainbow-tab('.js', rgb(252,216,76));
 .rainbow-tab('.jsx', #61dafb);
 .rainbow-tab('.less', rgb(50, 90, 162));
 .rainbow-tab('.md', rgb(97, 157, 182));
+.rainbow-tab('.pdf', rgb(186, 6, 5));
 .rainbow-tab('.php', rgb(107,125,196));
 .rainbow-tab('.png', rgb(218, 131, 57));
 .rainbow-tab('.pp', #3DFF3D);
