--- a/styles/rainbow-tabs.less
+++ b/styles/rainbow-tabs.less
@@ -33,6 +33,7 @@
 .rainbow-tab('.sass', #29abde);
 .rainbow-tab('.scss', #29abde);
 .rainbow-tab('.styl', #9ab84c);
+.rainbow-tab('.svg', rgb(232, 154, 45));
 .rainbow-tab('.tpl', rgb(252,128,27));
 .rainbow-tab('.ts', #1A3253);
 .rainbow-tab('.txt',rgb(255,255,255));
