--- a/styles/rainbow-tabs.less
+++ b/styles/rainbow-tabs.less
@@ -1,5 +1,6 @@
 @import "rainbow-mixins";
 
+.rainbow-tab('.bat', rgb(170, 117, 159));
 .rainbow-tab('.cc', rgb(102, 154, 211));
 .rainbow-tab('.coffee', rgb(214,233,245));
 .rainbow-tab('.cpp', rgb(102, 154, 211));
