--- a/styles/rainbow-tabs.less
+++ b/styles/rainbow-tabs.less
@@ -12,6 +12,7 @@
 .rainbow-tab('.ex', #7F72A4);
 .rainbow-tab('.exs', #7F72A4);
 .rainbow-tab('.eyaml', #FF5AE0);
+.rainbow-tab('.gitignore', rgb(172, 65, 66));
 .rainbow-tab('.go', rgb(106, 215, 229));
 .rainbow-tab('.html', rgb(252,128,27));
 .rainbow-tab('.ini', rgb(244, 191, 117));
