--- a/styles/rainbow-tabs.less
+++ b/styles/rainbow-tabs.less
@@ -25,6 +25,7 @@
 .rainbow-tab('.jsx', #61dafb);
 .rainbow-tab('.less', rgb(50, 90, 162));
 .rainbow-tab('.md', rgb(97, 157, 182));
+.rainbow-tab('.patch', rgb(144, 169, 89));
 .rainbow-tab('.pdf', rgb(186, 6, 5));
 .rainbow-tab('.php', rgb(107,125,196));
 .rainbow-tab('.png', rgb(218, 131, 57));
