--- a/styles/rainbow-tabs.less
+++ b/styles/rainbow-tabs.less
@@ -19,12 +19,14 @@
 .rainbow-tab('.java', rgb(221, 78, 56));
 .rainbow-tab('.jl', rgb(170,121,193));
 .rainbow-tab('.json', rgb(252,216,76));
-.rainbow-tab('.json', rgb(252,216,76));
+	.rainbow-tab('bower.json', rgb(241, 189, 116));
 	.rainbow-tab('package.json', rgb(203, 56, 55));
 .rainbow-tab('.js', rgb(252,216,76));
 .rainbow-tab('.jsx', #61dafb);
+.rainbow-tab('.jshintrc', rgb(244, 191, 117));
 .rainbow-tab('.less', rgb(50, 90, 162));
 .rainbow-tab('.md', rgb(97, 157, 182));
+.rainbow-tab('.npmignore', rgb(203, 56, 55));
 .rainbow-tab('.patch', rgb(144, 169, 89));
 .rainbow-tab('.pdf', rgb(186, 6, 5));
 .rainbow-tab('.php', rgb(107,125,196));
@@ -38,6 +40,7 @@
 .rainbow-tab('.styl', #9ab84c);
 .rainbow-tab('.svg', rgb(232, 154, 45));
 .rainbow-tab('.tpl', rgb(252,128,27));
+.rainbow-tab('.travis.yml', rgb(249, 249, 161));
 .rainbow-tab('.ts', #1A3253);
 .rainbow-tab('.txt',rgb(255,255,255));
 .rainbow-tab('.vue', #4fc08d);
