--- a/styles/rainbow-tabs.less
+++ b/styles/rainbow-tabs.less
@@ -25,6 +25,7 @@
 .rainbow-tab('.jsx', #61dafb);
 .rainbow-tab('.jshintrc', rgb(244, 191, 117));
 .rainbow-tab('.less', rgb(50, 90, 162));
+.rainbow-tab('Makefile', rgb(244, 185, 117));
 .rainbow-tab('.md', rgb(97, 157, 182));
 .rainbow-tab('.npmignore', rgb(203, 56, 55));
 .rainbow-tab('.patch', rgb(144, 169, 89));
