[file extensions] .ino

--- a/styles/rainbow-tabs.less
+++ b/styles/rainbow-tabs.less
@@ -16,6 +16,7 @@
 .rainbow-tab('.go', rgb(106, 215, 229));
 .rainbow-tab('.html', rgb(252,128,27));
 .rainbow-tab('.ini', rgb(244, 191, 117));
+.rainbow-tab('.ino', rgb(0, 151, 157));
 .rainbow-tab('.java', rgb(221, 78, 56));
 .rainbow-tab('.jl', rgb(170,121,193));
 .rainbow-tab('.json', rgb(252,216,76));
