[file extension] .mjs

--- a/styles/rainbow-tabs.less
+++ b/styles/rainbow-tabs.less
@@ -28,6 +28,7 @@
 .rainbow-tab('.less', rgb(50, 90, 162));
 .rainbow-tab('Makefile', rgb(244, 185, 117));
 .rainbow-tab('.md', rgb(97, 157, 182));
+.rainbow-tab('.mjs', rgb(106, 159, 181));
 .rainbow-tab('.npmignore', rgb(203, 56, 55));
 .rainbow-tab('.patch', rgb(144, 169, 89));
 .rainbow-tab('.pdf', rgb(186, 6, 5));
