--- a/styles/rainbow-tabs.less
+++ b/styles/rainbow-tabs.less
@@ -40,6 +40,7 @@
 .rainbow-tab('.rs', rgb(183,65,14));
 .rainbow-tab('.sass', #29abde);
 .rainbow-tab('.scss', #29abde);
+.rainbow-tab('.sh', rgb(170, 117, 159));
 .rainbow-tab('.styl', #9ab84c);
 .rainbow-tab('.svg', rgb(232, 154, 45));
 .rainbow-tab('.tpl', rgb(252,128,27));
