[file extension] CSV

--- a/styles/rainbow-tabs.less
+++ b/styles/rainbow-tabs.less
@@ -7,11 +7,12 @@
 .rainbow-tab('.c', rgb(106,215,229));
 .rainbow-tab('.cs', rgb(103, 153, 174));
 .rainbow-tab('.css', #29abde);
-.rainbow-tab('.elm', #60B5CC);
+.rainbow-tab('.csv', #c97071);
+.rainbow-tab('.elm', #60b5cc);
 .rainbow-tab('.erb', #cb6277);
-.rainbow-tab('.ex', #7F72A4);
-.rainbow-tab('.exs', #7F72A4);
-.rainbow-tab('.eyaml', #FF5AE0);
+.rainbow-tab('.ex', #7f72a4);
+.rainbow-tab('.exs', #7f72a4);
+.rainbow-tab('.eyaml', #ff5ae0);
 .rainbow-tab('.gitignore', rgb(172, 65, 66));
 .rainbow-tab('.go', rgb(106, 215, 229));
 .rainbow-tab('.html', rgb(252,128,27));
