[file extension] .run

--- a/styles/rainbow-tabs.less
+++ b/styles/rainbow-tabs.less
@@ -39,6 +39,7 @@
 .rainbow-tab('.py', rgb(60, 120, 168));
 .rainbow-tab('.rb', rgb(241,147,140));
 .rainbow-tab('.rs', rgb(183,65,14));
+.rainbow-tab('.run', rgb(170, 117, 159));
 .rainbow-tab('.sass', #29abde);
 .rainbow-tab('.scss', #29abde);
 .rainbow-tab('.sh', rgb(170, 117, 159));
