--- a/styles/rainbow-tabs.less
+++ b/styles/rainbow-tabs.less
@@ -45,6 +45,7 @@
 .rainbow-tab('.sh', rgb(170, 117, 159));
 .rainbow-tab('.styl', #9ab84c);
 .rainbow-tab('.svg', rgb(232, 154, 45));
+.rainbow-tab('.toml', rgb(115, 134, 78));
 .rainbow-tab('.tpl', rgb(252,128,27));
 .rainbow-tab('.travis.yml', rgb(249, 249, 161));
 .rainbow-tab('.ts', #1A3253);
