[file extension] .tex .bib .bst

--- a/styles/rainbow-tabs.less
+++ b/styles/rainbow-tabs.less
@@ -1,6 +1,8 @@
 @import "rainbow-mixins";
 
 .rainbow-tab('.bat', rgb(170, 117, 159));
+.rainbow-tab('.bib', #e3b36f);
+.rainbow-tab('.bst', #8ca457);
 .rainbow-tab('.cc', rgb(102, 154, 211));
 .rainbow-tab('.coffee', rgb(214,233,245));
 .rainbow-tab('.cpp', rgb(102, 154, 211));
@@ -45,6 +47,7 @@
 .rainbow-tab('.sh', rgb(170, 117, 159));
 .rainbow-tab('.styl', #9ab84c);
 .rainbow-tab('.svg', rgb(232, 154, 45));
+.rainbow-tab('.tex', #6393a8);
 .rainbow-tab('.toml', rgb(115, 134, 78));
 .rainbow-tab('.tpl', rgb(252,128,27));
 .rainbow-tab('.travis.yml', rgb(249, 249, 161));
