[file] Cargo.toml Cargo.lock

--- a/styles/rainbow-tabs.less
+++ b/styles/rainbow-tabs.less
@@ -29,6 +29,7 @@
 .rainbow-tab('.jsx', #61dafb);
 .rainbow-tab('.jshintrc', rgb(244, 191, 117));
 .rainbow-tab('.less', rgb(50, 90, 162));
+.rainbow-tab('Cargo.lock', hsl(27, 61%, 40%));
 .rainbow-tab('Makefile', rgb(244, 185, 117));
 .rainbow-tab('.md', rgb(97, 157, 182));
 .rainbow-tab('.mjs', rgb(106, 159, 181));
@@ -49,6 +50,7 @@
 .rainbow-tab('.svg', rgb(232, 154, 45));
 .rainbow-tab('.tex', #6393a8);
 .rainbow-tab('.toml', rgb(115, 134, 78));
+	.rainbow-tab('Cargo.toml', hsl(27, 61%, 70%));
 .rainbow-tab('.tpl', rgb(252,128,27));
 .rainbow-tab('.travis.yml', rgb(249, 249, 161));
 .rainbow-tab('.ts', #1A3253);
