--- a/styles/rainbow-tabs.less
+++ b/styles/rainbow-tabs.less
@@ -5,6 +5,7 @@
 .rainbow-tab('.bst', #8ca457);
 .rainbow-tab('.cc', rgb(102, 154, 211));
 .rainbow-tab('.coffee', rgb(214,233,245));
+.rainbow-tab('.coffee', hsl(38, 76%, 66%));
 .rainbow-tab('.cpp', rgb(102, 154, 211));
 .rainbow-tab('.c', rgb(106,215,229));
 .rainbow-tab('.cs', rgb(103, 153, 174));
