--- a/styles/rainbow-tabs.less
+++ b/styles/rainbow-tabs.less
@@ -18,6 +18,7 @@
 .rainbow-tab('.eyaml', #ff5ae0);
 .rainbow-tab('.gitignore', rgb(172, 65, 66));
 .rainbow-tab('.go', rgb(106, 215, 229));
+.rainbow-tab('.hcl', hsl(316, 37%, 40%));
 .rainbow-tab('.html', rgb(252,128,27));
 .rainbow-tab('.ini', rgb(244, 191, 117));
 .rainbow-tab('.ino', rgb(0, 151, 157));
