--- a/styles/rainbow-tabs.less
+++ b/styles/rainbow-tabs.less
@@ -17,6 +17,7 @@
 .rainbow-tab('.exs', #7f72a4);
 .rainbow-tab('.eyaml', #ff5ae0);
 .rainbow-tab('.gitignore', rgb(172, 65, 66));
+.rainbow-tab('.gitmodules', rgb(172, 65, 66));
 .rainbow-tab('.go', rgb(106, 215, 229));
 .rainbow-tab('.hcl', hsl(316, 37%, 40%));
 .rainbow-tab('.html', rgb(252,128,27));
