--- a/styles/rainbow-tabs.less
+++ b/styles/rainbow-tabs.less
@@ -43,6 +43,7 @@
 .rainbow-tab('.php', rgb(107,125,196));
 .rainbow-tab('.png', rgb(218, 131, 57));
 .rainbow-tab('.pp', #3DFF3D);
+.rainbow-tab('.properties', hsl(317, 35%, 55%));
 .rainbow-tab('.py', rgb(60, 120, 168));
 .rainbow-tab('.rb', rgb(241,147,140));
 .rainbow-tab('.rs', rgb(183,65,14));
