--- a/styles/rainbow-tabs.less
+++ b/styles/rainbow-tabs.less
@@ -11,6 +11,7 @@
 .rainbow-tab('.cs', rgb(103, 153, 174));
 .rainbow-tab('.css', #29abde);
 .rainbow-tab('.csv', #c97071);
+.rainbow-tab('Dockerfile', #15b8f0);
 .rainbow-tab('.elm', #60b5cc);
 .rainbow-tab('.erb', #cb6277);
 .rainbow-tab('.ex', #7f72a4);
