--- a/styles/rainbow-tabs.less
+++ b/styles/rainbow-tabs.less
@@ -20,6 +20,7 @@
 .rainbow-tab('.gitignore', rgb(172, 65, 66));
 .rainbow-tab('.gitmodules', rgb(172, 65, 66));
 .rainbow-tab('.go', rgb(106, 215, 229));
+.rainbow-tab('.h', #b4649d);
 .rainbow-tab('.hcl', hsl(316, 37%, 40%));
 .rainbow-tab('.html', rgb(252,128,27));
 .rainbow-tab('.ini', rgb(244, 191, 117));
