--- a/styles/rainbow-tabs.less
+++ b/styles/rainbow-tabs.less
@@ -41,6 +41,7 @@
 .rainbow-tab('.nomad', hsl(93, 39%, 52%));
 .rainbow-tab('.npmignore', rgb(203, 56, 55));
 .rainbow-tab('.patch', rgb(144, 169, 89));
+.rainbow-tab('.pde', #009c9f);
 .rainbow-tab('.pdf', rgb(186, 6, 5));
 .rainbow-tab('.php', rgb(107,125,196));
 .rainbow-tab('.png', rgb(218, 131, 57));
