--- a/styles/rainbow-tabs.less
+++ b/styles/rainbow-tabs.less
@@ -6,6 +6,7 @@
 .rainbow-tab('.cc', rgb(102, 154, 211));
 .rainbow-tab('.coffee', rgb(214,233,245));
 .rainbow-tab('.coffee', hsl(38, 76%, 66%));
+.rainbow-tab('.conf', #f8c36b);
 .rainbow-tab('config', #3f768e);
 .rainbow-tab('.cpp', rgb(102, 154, 211));
 .rainbow-tab('.c', rgb(106,215,229));
