--- a/styles/rainbow-tabs.less
+++ b/styles/rainbow-tabs.less
@@ -46,6 +46,7 @@
 .rainbow-tab('.pde', #009c9f);
 .rainbow-tab('.pdf', rgb(186, 6, 5));
 .rainbow-tab('.php', rgb(107,125,196));
+.rainbow-tab('.plt', rgb(204, 42, 42));
 .rainbow-tab('.png', rgb(218, 131, 57));
 .rainbow-tab('.pp', #3DFF3D);
 .rainbow-tab('.properties', hsl(317, 35%, 55%));
