--- a/styles/rainbow-tabs.less
+++ b/styles/rainbow-tabs.less
@@ -67,4 +67,5 @@
 .rainbow-tab('.ts', #1A3253);
 .rainbow-tab('.txt',rgb(255,255,255));
 .rainbow-tab('.vue', #4fc08d);
+.rainbow-tab('.wren', #8f6043);
 .rainbow-tab('.yaml', #FF5AE0);
